src/objects/Users__c.object
<CustomObject>
    <description>For Utilization Purpose</description>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_EndTime1__c</fullName>
        <label>Extension_EndTime</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00:00</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>00:30:00</fullName>
                </value>
                <value>
                    <fullName>01:00:00</fullName>
                </value>
                <value>
                    <fullName>01:30:00</fullName>
                </value>
                <value>
                    <fullName>02:00:00</fullName>
                </value>
                <value>
                    <fullName>02:30:00</fullName>
                </value>
                <value>
                    <fullName>03:00:00</fullName>
                </value>
                <value>
                    <fullName>03:30:00</fullName>
                </value>
                <value>
                    <fullName>04:00:00</fullName>
                </value>
                <value>
                    <fullName>04:30:00</fullName>
                </value>
                <value>
                    <fullName>05:00:00</fullName>
                </value>
                <value>
                    <fullName>05:30:00</fullName>
                </value>
                <value>
                    <fullName>06:00:00</fullName>
                </value>
                <value>
                    <fullName>06:30:00</fullName>
                </value>
                <value>
                    <fullName>07:00:00</fullName>
                </value>
                <value>
                    <fullName>07:30:00</fullName>
                </value>
                <value>
                    <fullName>08:00:00</fullName>
                </value>
                <value>
                    <fullName>08:30:00</fullName>
                </value>
                <value>
                    <fullName>09:00:00</fullName>
                </value>
                <value>
                    <fullName>09:30:00</fullName>
                </value>
                <value>
                    <fullName>10:00:00</fullName>
                </value>
                <value>
                    <fullName>10:30:00</fullName>
                </value>
                <value>
                    <fullName>11:00:00</fullName>
                </value>
                <value>
                    <fullName>11:30:00</fullName>
                </value>
                <value>
                    <fullName>12:00:00</fullName>
                </value>
                <value>
                    <fullName>12:30:00</fullName>
                </value>
                <value>
                    <fullName>13:00:00</fullName>
                </value>
                <value>
                    <fullName>13:30:00</fullName>
                </value>
                <value>
                    <fullName>14:00:00</fullName>
                </value>
                <value>
                    <fullName>14:30:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <description>This field holds the profile name of the users</description>
        <label>ProfileName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Type__c</fullName>
        <label>Shift Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>AfterNoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Night</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Licenses__c</fullName>
        <label>User Licenses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>approaval_track__c</fullName>
        <label>approaval track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extend Time Request</fullName>
                </value>
                <value>
                    <fullName>Extend Time Request Approved</fullName>
                </value>
                <value>
                    <fullName>Extend Time Request Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Users</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Shift_Type__c</columns>
        <columns>NAME</columns>
        <columns>ProfileName__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Status__c</columns>
        <columns>User__c</columns>
        <columns>User_Licenses__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>customrj_view</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Shift_Type__c</columns>
        <columns>ProfileName__c</columns>
        <columns>Name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Extension_EndTime1__c</columns>
        <columns>approaval_track__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProfileName__c</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filters>
        <label>custom_view</label>
    </listViews>
    <nameField>
        <displayFormat>User-{00000}</displayFormat>
        <label>User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>